# cyberarm

./: CMakeLists.txt  package.xml
cyber_arm/: CMakeLists.txt  package.xml
cyber_arm/include/cyber_arm/: cybergear.hpp
cyber_arm/include/cyber_arm/sym/: forward4d.h
cyber_arm/include/cyberarm/: cybergear.hpp
cyber_arm/include/cyberarm/sym/: forward3d.h
cyber_arm/launch/: bringup.launch.py  camera.launch.py  viz.launch.py
cyber_arm/models/: model.urdf
cyber_arm/rviz/: default.rviz
cyber_arm/scripts/: face_detector.py  face_tracker.py  keyboard_teleop.py
cyber_arm/src/: cyberarm_node.cc  cybergear.cc  cybergear_node.cc
cyber_arm/test/: multi_motor.cc  position_mode.cc  single_motor.cc
cyber_msgs/: CMakeLists.txt  package.xml
cyber_msgs/msg/: CyberarmTarget4D.msg  CybergearState.msg  CybergearStateStamped.msg  MotionCommand.msg
include/cyberarm/: cybergear.hpp
include/cyberarm/sym/: forward3d.h
launch/: bringup.launch.py  viz.launch.py
models/: model.urdf
models/meshes/: EndEffector.dae  Joint1.dae  JointArm.dae
scripts/: control.py
src/: cyberarm_node.cc  cybergear.cc
test/: arm_viz.cc  single_motor.cc  single_motor_position.cc
